# civic_tech_appropriations_bills

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  TESTING.md  diff_bill.py  diff_pdf.py  fetch_bills.py  pdf_test_cases.py  pyproject.toml  test_diff_pdf.py  test_diff_validation.py  test_formatters_adapters_pdf.py  test_formatters_canonical.py  test_formatters_diff_html_card.py  test_formatters_diff_html_sidebar_callout.py  test_formatters_diff_html_skeleton.py  test_pdf_test_cases.py  test_pdf_text_recall.py  validation_check.py  validation_sources.py
docs/: billtrax-merge-and-build-vs-buy.md  parser-validation.md
examples/: hr4366_committee_vs_floor.html  hr4366_house_vs_senate.html  hr8752_pdf_diff.html
formatters/: adapters.py  canonical.py  diff_html.py  html.py  pdf_html.py
parsers/: committee_report.py  pdf_text.py
prototype/: app.js  index.html  styles.css
scripts/: build_validation.py  build_validation_cjs.py  fetch_test_assets.py  generate_validation_report.py
test_data/: CRPT-118srpt191.htm  CRPT-118srpt193.htm  CRPT-118srpt198.htm  CRPT-118srpt199.htm  CRPT-118srpt200.htm  CRPT-118srpt201.htm  CRPT-118srpt204.htm  CRPT-118srpt205.htm  CRPT-118srpt206.htm  CRPT-118srpt207.htm  CRPT-118srpt62.htm  CRPT-118srpt85.htm  validation_agriculture.json  validation_cjs.json  validation_cjs_fy2024.json  validation_defense.json  validation_energy_water.json  validation_financial_services.json  validation_homeland_security.json  validation_interior_environment.json  validation_labor_hhs.json  validation_milcon_va.json  validation_state_foreign_ops.json  (+1 more)
(+39 files in other folders)
