[project]
name = "bill-diff"
version = "0.1.0"
description = "Download U.S. bill text from Congress.gov and compare versions structurally"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "pdfplumber>=0.11",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "respx>=0.22",
    "ruff>=0.11",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Tests live in tests/ but import the source modules at the repo root.
pythonpath = ["."]
markers = [
    "slow: tests that require real bill XML files (deselect with '-m not slow')",
]

[tool.coverage.run]
# Coverage measures the diff engine, not the tests or fetch tooling.
omit = [
    "tests/*",
    "fetch_bills.py",
    "render_examples.py",
]
